# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [1.1.0] - 2022-07-02
### Changed
- Allow no whitespace between aggregate shape name and opening curly

## [1.0.1] - 2022-06-20
### Changed
- Reduce package size

## [1.0.0] - 2022-06-20
### Added
- Initial release