@@ -1,0 +1,8 @@
+namespace smithy.example
+
+$version: "1.0"
+
+structure Foo {
+    $bar,
+    baz: String,
+}
